<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/addInventoryFragment"
            android:title="@string/action_Inventory" />

        <item
            android:id="@+id/dependencyListFragment"
            android:title="@string/action_dependency" />

        <item
            android:id="@+id/action_sections"
            android:title="@string/action_Sections" />

        <item
            android:id="@+id/productFragment"
            android:title="@string/action_products" />
    </group>
    <item android:title="@string/menu_options">
        <menu>
            <item
                android:id="@+id/aboutUsFragment"
                android:title="@string/action_aboutUs" />

            <item
                android:id="@+id/settingsFragment"
                android:title="@string/action_settings" />
        </menu>
    </item>
</menu>